[metadata]
name = parkon-client
version = 0.1.0
author = Simon Rupf
author_email = simon@rupf.net
description = Library and CLI client to request parking spots in the parkon API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SimonRupf/parkon-python-client
project_urls =
    Bug Tracker = https://github.com/SimonRupf/parkon-python-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    parkon_client = parkon_client.parkon_client:main
